fix for firefox dragging bug. Especially when edit interface is up in fb-left, it was possible in Firefox when reordering elements on the fb-right div, for the element to pop over and start overlapping the left frame. This fixes that. Addresses https://app.asana.com/0/691627771928/9515041912172 "Fix Firefox dragging bug"

--- a/src/styles/formbuilder.styl
+++ b/src/styles/formbuilder.styl
@@ -137,6 +137,7 @@ $editing-border = darken($editing-bg, 7%)
 
 .fb-response-fields {
   min-height:100px;
+  position: relative;
 }
 
 .fb-response-fields a.sortable-placeholder {
